# Enigma2.0

./: CMakeLists.txt  README.md  flash.sh  readme  readme.md
Enigma2.0/: README.md
Enigma2.0/src/: functions.c  functions.h  main.c  plugboard.c  plugboard.h  ui_functions.c  ui_functions.h
Resources/: schematic.drawio
src/: CMakelists.txt  functions.c  functions.h  main.c  plugboard.c  ui_functions.c
